# mgprfs-mesh-generator

./: CMakeLists.txt  LICENSE  README  README.md
doc/: CMakeLists.txt  Doxyfile.in  command_line_interface.md  command_line_interface.txt  mainpage.dox
src/: CMakeLists.txt  debug.hpp  error_diffusion.cpp  error_diffusion.hpp  image.cpp  image.hpp  make_model.cpp  mesh_generator.cpp  mesh_generator.hpp  mesh_generator_impl.hpp  pixel.hpp  rasterize_helper.hpp  rasterize_model.cpp  scan_triangle.cpp  scan_triangle.hpp  util.cpp  util.hpp
src/helper/: CMakeLists.txt  README  data_compare.cpp  image_compare.cpp  mirror_image.cpp  off_to_triangulation.cpp  output_image_attributes.cpp  output_mesh_size.cpp  ssim.cpp  test_convolution.cpp
